[package]
description = "gRPC bindings to the CSI spec"
edition = "2021"
license = "Apache-2.0"
name = "bpfman-csi"
repository = "https://github.com/bpfman/bpfman"
version = "1.8.0"

[dependencies]
prost = { workspace = true, features = ["prost-derive", "std"] }
prost-types = { workspace = true }
tonic = { workspace = true, features = ["codegen", "prost"] }
