[package]
description = "gRPC bindings to the CSI spec"
name = "bpfman-csi"
version = "1.8.0"
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
prost = { workspace = true, features = ["prost-derive", "std"] }
prost-types = { workspace = true }
tonic = { workspace = true, features = ["codegen", "prost"] }
