[package]
description = "gRPC bindings to the CSI spec"
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "bpfman-csi"
repository.workspace = true
version = "1.8.0"

[dependencies]
prost = { workspace = true, features = ["prost-derive", "std"] }
prost-types = { workspace = true }
tonic = { workspace = true, features = ["codegen", "prost"] }
