[package]
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "xtask"
publish = false
repository.workspace = true
version.workspace = true

[dependencies]
anyhow = { workspace = true, features = ["std"] }
clap = { workspace = true, features = [
    "derive",
    "help",
    "std",
    "suggestions",
    "usage",
] }
dialoguer = { workspace = true }
diff = { workspace = true }
hex = { workspace = true, features = ["std"] }
lazy_static = { workspace = true }
log = { workspace = true }
rustdoc-json = { workspace = true }
rustup-toolchain = { workspace = true }
serde_json = { workspace = true, features = ["std"] }
tonic-build = { workspace = true, features = ["prost"] }
