[package]
name = "integration-test-macros"
publish = false
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
quote = { workspace = true }
syn = { workspace = true, features = ["full"] }

[lib]
proc-macro = true
