[package]
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "integration-test"
publish = false
repository.workspace = true
version.workspace = true

[dependencies]
anyhow = { workspace = true, features = ["std"] }
bpfman = { workspace = true }
env_logger = { workspace = true }
inventory = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
predicates = { workspace = true }
procfs = { workspace = true }
rand = { workspace = true, features = ["std", "std_rng"] }
regex = { workspace = true, features = ["unicode-perl"] }
sled = { workspace = true }
