[package]
name = "basic-node-firewall-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
aya-bpf = { git = "https://github.com/aya-rs/aya", branch = "main" }
aya-log-ebpf = { git = "https://github.com/aya-rs/aya", branch = "main" }
basic-node-firewall-common = { path = "../basic-node-firewall-common" }
memoffset = "0.6"

[[bin]]
name = "basic-node-firewall-loader"
path = "src/main.rs"

[profile.dev]
opt-level = 3
debug = true
debug-assertions = true
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1
rpath = false

[profile.release]
lto = true
panic = "abort"
codegen-units = 1

[workspace]
members = []
